[package]
name = "slushy"
version = "0.1.0"
edition = "2021"

[dependencies]

# Justification: performance
#
# Regular expressions should be compiled only once, and the `regex` crate
# recommends using `lazy_static` to accomplish this. The alternative is either
# messy code or the anti-pattern of re-compiling regular expressions.
lazy_static = "1.4.0"

# Justification: sanity
regex = "1.7"

# Following the best recommendations I know to optimize for binary size above
# other factors like speed:
#
# https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
[profile.release]
strip = true
lto = true
opt-level = "z"