[package]
name = "slushy"
version = "0.1.0"
edition = "2021"

[dependencies]

# Justification: convenience
anyhow = "1"

# Justification: convenience
indexmap = "1.9.2"

# Justification: performance
lazy_static = "1.4.0"

# Justification: sanity
regex = "1.7"

# Following the best recommendations I know to optimize for binary size above:
#
# https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
[profile.release]
strip = true
lto = true
